# Persian-text-preprocessing

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  PreprocessPipeline.py  README.md  pyproject.toml  requirements.txt
constraints/: py38-cpu.txt
persian_text_pp/: Dockerfile  FarsiLanguageRecognition.py  Informal2Formal.py  Lemmatizer.py  Normalize.py  RemoveDiacritics.py  RemovePunctuations.py  RemoveRepeatingChar.py  RemoveStopWords.py  Tokenize.py  informal2formal.py  lemmatizer.py  normalize_persian.py  remove_diacritics.py  remove_punctuations.py  remove_repeating_char.py
persian_text_pp/get_stopwords/: get_stopwords.py
persian_text_pp/get_stopwords/persian_stopwords/: verbal.txt
persian_text_pp/remove_stopwords/: remove_stopwords.py
persian_text_pp/remove_stopwords/persian_stopwords/: short.txt
preproc_pkg/: __init__.py  _assets.py  _hf_cache.py  cli.py  project_code_snapshot.txt
preproc_pkg/formal_pkg/: __init__.py  pipeline.py
preproc_pkg/lemma_pkg/: __init__.py  pipeline.py
preproc_pkg/normalizer_pkg/: __init__.py  hazm_normalizer.py  parsivar_normalizer.py  pinglish.py  pipeline.py
preproc_pkg/spell_pkg/: __init__.py  pipeline.py
preproc_pkg/stem_pkg/: __init__.py  pipeline.py
preproc_pkg/stopword_pkg/: __init__.py  pipeline.py
preproc_pkg/utils/: constants.py  textutils.py
usage_examples/: README.md  cli_examples.ps1  cli_examples.sh  formal_example.py  formal_t5_example.py  lemma_example.py  normalization_example.py  quickstart_example.py  spell_example.py  stem_example.py  stopword_example.py
(+31 files in other folders)
